fix: entity view page + elastic output

--- a/packages/entity-ng/src/types/entity-types.component.html
+++ b/packages/entity-ng/src/types/entity-types.component.html
@@ -16,7 +16,7 @@
 
       <tbody>
       <tr *ngFor="let entityDef of getEntityRefs()">
-        <td>{{entityDef.getOptions('schema')}}</td>
+        <td>{{entityDef.getOptions('schema', []).join(', ')}}</td>
         <td>{{entityDef.name}}</td>
         <td>{{entityDef.name}}</td>
         <td>
