--- a/packages/storage-ng/src/types/storage-types.component.html
+++ b/packages/storage-ng/src/types/storage-types.component.html
@@ -19,7 +19,7 @@
       <tbody>
       <tr *ngFor="let entityRef of getEntityRefs()">
         <td>{{entityRef.getNamespace()}}</td>
-        <td>{{entityRef.getOptions('schema').join(', ')}}</td>
+        <td>{{entityRef.getOptions('schema', []).join(', ')}}</td>
         <td>{{entityRef.name}}</td>
         <td>{{entityRef.getClass().name}}</td>
         <td>
