--- a/packages/base-ng/src/component/entities/page/page.component.html
+++ b/packages/base-ng/src/component/entities/page/page.component.html
@@ -1,15 +1,15 @@
 <div class="card">
   <div class="card-header">
-    <h3>View entity "{{name}}"</h3>
-
+    <h3>{{label()}}</h3>
   </div>
+
   <div class="card-body">
     <div *ngIf="!ready">
       Waiting ...
     </div>
 
     <div *ngIf="ready">
-      <txs-view [instance]="instance" allowViewModeSwitch="true" mode="full" [options]="{elem: {reload: true}}">
+      <txs-view #content [instance]="instance" allowViewModeSwitch="true" mode="full" [options]="{elem: {reload: true}}">
         <div txsViewFallback>
           <txs-simple-json [instance]="instance" [options]="{elem: {reload: true}}"></txs-simple-json>
         </div>
