--- a/packages/ng-theme-base/src/base_admin_theme.component.scss
+++ b/packages/ng-theme-base/src/base_admin_theme.component.scss
@@ -1,4 +1,6 @@
-
+@import "~bootstrap/dist/css/bootstrap.css";
+@import "~animate.css/animate.css";
+@import "~perfect-scrollbar/css/perfect-scrollbar.css";
 
 .badge-success {
   color: #fff;
