--- a/packages/app/src/styles/styles.scss
+++ b/packages/app/src/styles/styles.scss
@@ -3,9 +3,9 @@ body, html {
   height: 100%;
 }
 
-//@import "~bootstrap/dist/css/bootstrap.css";
-//@import "~animate.css/animate.css";
-//@import "~perfect-scrollbar/css/perfect-scrollbar.css";
+@import "~bootstrap/dist/css/bootstrap.css";
+@import "~animate.css/animate.css";
+@import "~perfect-scrollbar/css/perfect-scrollbar.css";
 @import "icons-pct.css";
 
 $fa-font-path: '/assets/fonts/';
