--- a/packages/storage-ng/src/backends/storage-backends.component.html
+++ b/packages/storage-ng/src/backends/storage-backends.component.html
@@ -3,40 +3,41 @@
     <h3>Backends</h3>
   </div>
   <div class="card-body">
-      <table class="table hover">
-        <thead>
-        <tr>
-          <th>Name</th>
-          <th>Type</th>
-          <th>Entities</th>
-          <th>Options</th>
-          <th>Ops</th>
-        </tr>
-        </thead>
-
-        <tbody>
-        <tr *ngFor="let storage of storages">
-          <td>{{storage.name}}</td>
-          <td>{{storage.type}}</td>
-          <td>
-            {{storage.entities.length}}
-          </td>
-          <td>
-            <details>
-              <summary>JSON</summary>
-              <pre class="language-js">
-          {{storage.options | json}}
+    <table class="table hover">
+      <thead>
+      <tr>
+        <th>Name</th>
+        <th>Type</th>
+        <th>Framework</th>
+        <th>Entities</th>
+        <th>Options</th>
+        <th>Ops</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr *ngFor="let backend of backends">
+        <td>{{backend.name}}</td>
+        <td>{{backend.type}}</td>
+        <td>{{backend.framework}}</td>
+        <td>
+          {{backend.entitiesCount}}
+        </td>
+        <td>
+          <details>
+            <summary>JSON</summary>
+            <pre class="language-js">
+              {{backend.options | json}}
             </pre>
-            </details>
-          </td>
-          <td>
-            <!-- TODO
-            <a class="btn btn-primary"
-               [routerLink]="[storageService.getNgUrlPrefix(),'backend',storage.name]">View</a>
-               -->
-          </td>
-        </tr>
-        </tbody>
-      </table>
+          </details>
+        </td>
+        <td>
+          <!-- TODO
+          <a class="btn btn-primary"
+             [routerLink]="[storageService.getNgUrlPrefix(),'backend',storage.name]">View</a>
+             -->
+        </td>
+      </tr>
+      </tbody>
+    </table>
   </div>
 </div>
