--- a/packages/tasks-ng/src/metadata/tasks-metadata.component.html
+++ b/packages/tasks-ng/src/metadata/tasks-metadata.component.html
@@ -37,7 +37,7 @@
         <div class="col-md-2 mt-2">{{task.getType()}}</div>
         <div class="col-md-2 mt-2">
           <ul class="list-unstyled">
-            <li *ngFor="let nodeid of task.nodeIds">{{nodeid}}</li>
+            <li *ngFor="let nodeid of task.getOptions('nodeIds', [])">{{nodeid}}</li>
           </ul>
         </div>
         <div class="col-md-auto mt-1">
