fix: work on ng layout + task logging

--- a/packages/app/src/app/components/embedded-storage/overview.component.html
+++ b/packages/app/src/app/components/embedded-storage/overview.component.html
@@ -1,10 +1,10 @@
 <bat-card title="Embedded Storage">
   <ul class="nav">
     <li class="nav-item">
-      <a routerLink=".">SimpleTable (Default)</a>
+      <a class="nav-link" routerLinkActive="active" routerLink=".">SimpleTable (Default)</a>
     </li>
     <li class="nav-item">
-      <a routerLink="ag-grid">AgGrid</a>
+      <a  class="nav-link" routerLinkActive="active" routerLink="ag-grid">AgGrid</a>
     </li>
   </ul>
   <div class="container-fluid">
