--- a/packages/forms-ng/src/grid/grid.component.html
+++ b/packages/forms-ng/src/grid/grid.component.html
@@ -1,6 +1,6 @@
 <div class="form-group">
   <div>
-    <div class="form-row">
+    <div class="row">
       <div class="col-1" *ngIf="showNr()">Nr</div>
       <div class="col" *ngFor="let column of columns"><strong>{{column.label}}</strong></div>
       <div class="col-1" *ngIf="!isFixed()">Ops</div>
@@ -9,7 +9,7 @@
 
   </div>
   <div *ngIf="!isFixed()">
-    <button (click)="addRow()" class="btn btn-primary">Add row</button>
+    <a (click)="addRow()" class="btn btn-primary">Add row</a>
   </div>
 
 </div>
