--- a/packages/ng-theme-base/src/components/notifications/notifications.component.html
+++ b/packages/ng-theme-base/src/components/notifications/notifications.component.html
@@ -1,6 +1,8 @@
-<div class="message-container alert alert-dismissible alert-{{item.getTypeAsLowerCase()}}" *ngFor="let item of items; let idx = index;" [ngClass]="{closing: item.closing}">
+<div class="message-container alert alert-dismissible alert-{{item.getTypeAsLowerCase()}}"
+     *ngFor="let item of items; let idx = index;" [ngClass]="{closing: item.closing}"
+     role="alert">
   <strong class="heading">{{item.heading}}</strong>
   <span class="message">{{item.message}}</span>
-  <button type="button" class="close" (click)="close(idx)"
-          aria-label="Close"><span aria-hidden="true">×</span></button>
+  <button type="button" class="btn-close" (click)="close(idx)"
+          aria-label="Close"></button>
 </div>
