--- a/packages/app/src/styles/styles.scss
+++ b/packages/app/src/styles/styles.scss
@@ -13,6 +13,9 @@ $fa-font-path: '/assets/fonts/';
 @import "~@fortawesome/fontawesome-free/scss/brands";
 @import "~@fortawesome/fontawesome-free/scss/solid";
 
+@import "~ag-grid-community/dist/styles/ag-grid.css";
+@import "~ag-grid-community/dist/styles/ag-theme-balham.css";
+
 /**  =====================
      Google Font
 ==========================  **/
