--- a/packages/base-ng/src/messages/alert.component.html
+++ b/packages/base-ng/src/messages/alert.component.html
@@ -1,4 +1,4 @@
-<div *ngFor="let alert of messages" class="{{ cssClass(alert) }} alert-dismissable">
+<div *ngFor="let alert of messages" class="{{ cssClass(alert) }} alert-dismissible" role="alert">
   <span *ngIf="alert.topic">{{alert.topic}}</span> {{alert.content}}
-  <a class="close" (click)="removeAlert(alert)">&times;</a>
+  <button type="button" (click)="removeAlert(alert)" class="btn-close" aria-label="Close"></button>
 </div>
