--- a/packages/forms-ng/src/component/select/select.component.html
+++ b/packages/forms-ng/src/component/select/select.component.html
@@ -1,7 +1,7 @@
 <div class="form-group select-wrapper" [ngSwitch]="labelDisplay">
   <label *ngSwitchCase="'top'" for="{{id}}">{{label}}</label>
   <select id="{{id}}"
-          class="form-control {{data.checked(name) ? data.valid(name) ? 'is-valid' : 'is-invalid' : '' }}"
+          class="form-control {{getDataContainer().checked(name) ? getDataContainer().valid(name) ? 'is-valid' : 'is-invalid' : '' }}"
           [(ngModel)]="value"
           name="{{ name }}"
           [attr.readonly]="isReadOnly"
@@ -10,9 +10,9 @@
     <option *ngFor="let obj of cachedOptions" [value]="obj.value">{{obj.label}}</option>
   </select>
   <small *ngIf="help" id="{{name}}Help" class="form-text text-muted">{{help}}</small>
-  <div [hidden]="!(data.checked(name) && !data.valid(name))" class="invalid-feedback">
+  <div [hidden]="!(getDataContainer().checked(name) && !getDataContainer().valid(name))" class="invalid-feedback">
     <ul>
-      <li *ngFor="let message of data.messages(name)" class="message-validator-{{ message.type }}">
+      <li *ngFor="let message of getDataContainer().messages(name)" class="message-validator-{{ message.type }}">
         {{ message.content }}
       </li>
     </ul>
