--- a/packages/forms-ng/src/radio.component.html
+++ b/packages/forms-ng/src/radio.component.html
@@ -4,7 +4,7 @@
   <div class="form-check">
     <input id="{{id}}_1"
            type="{{type}}"
-           class="form-check-input {{data.checked(name) ? data.valid(name) ? 'is-valid' : 'is-invalid' : '' }}"
+           class="form-check-input {{getDataContainer().checked(name) ? getDataContainer().valid(name) ? 'is-valid' : 'is-invalid' : '' }}"
            placeholder="{{name}}"
            [checked]="isChecked"
            name="{{ name }}"
@@ -15,7 +15,7 @@
   <div class="form-check">
     <input id="{{id}}_2"
            type="{{type}}"
-           class="form-check-input {{data.checked(name) ? data.valid(name) ? 'is-valid' : 'is-invalid' : '' }}"
+           class="form-check-input {{getDataContainer().checked(name) ? getDataContainer().valid(name) ? 'is-valid' : 'is-invalid' : '' }}"
            placeholder="{{name}}"
            [checked]="!isChecked"
            name="{{ name }}"
@@ -25,9 +25,9 @@
   </div>
 
   <small *ngIf="help" id="{{name}}Help" class="form-text text-muted">{{help}}</small>
-  <div [hidden]="!(data.checked(name) && !data.valid(name))" class="invalid-feedback">
+  <div [hidden]="!(getDataContainer().checked(name) && !getDataContainer().valid(name))" class="invalid-feedback">
     <ul>
-      <li *ngFor="let message of data.messages(name)" class="message-type {{ message.type }}">{{ message.content }}
+      <li *ngFor="let message of getDataContainer().messages(name)" class="message-type {{ message.type }}">{{ message.content }}
       </li>
     </ul>
   </div>
