fix work on ng entity and storage listings

--- a/packages/entity-ng/src/modify/entity-modify.component.html
+++ b/packages/entity-ng/src/modify/entity-modify.component.html
@@ -15,6 +15,7 @@
       <div *ngIf="error" class="error">{{error}}</div>
       <txs-form *ngIf="instance" formName="entity-create-form'"
                 [instance]="instance"
+                [options]="formOptions"
                 (ngSubmit)="onSubmit($event)"></txs-form>
     </div>
   </div>
