--- a/packages/ng-theme-base/src/scss/themes/admin/partials/_menu.scss
+++ b/packages/ng-theme-base/src/scss/themes/admin/partials/_menu.scss
@@ -780,7 +780,7 @@
       &.txs-menu-caption {
         font-size: 10px;
         font-weight: 600;
-        padding: 12px 20px 0px;
+        padding: 12px 20px;
         text-transform: uppercase;
         position: relative;
       }
