--- a/packages/storage-ng/src/modify/storage-modify.component.html
+++ b/packages/storage-ng/src/modify/storage-modify.component.html
@@ -14,7 +14,9 @@
       <div *ngIf="error" class="error">{{error}}</div>
       <txs-form *ngIf="instance" formName="entity-create-form'"
                 [registry]="getRegistry()"
-                [instance]="instance" (ngSubmit)="onSubmit($event)"></txs-form>
+                [instance]="instance"
+                [options]="formOptions"
+                (ngSubmit)="onSubmit($event)"></txs-form>
     </div>
   </div>
 </div>
