--- a/packages/entity-ng/src/modify/entity-modify.component.html
+++ b/packages/entity-ng/src/modify/entity-modify.component.html
@@ -14,6 +14,7 @@
     <div *ngIf="ready">
       <div *ngIf="error" class="error">{{error}}</div>
       <txs-form *ngIf="instance" formName="entity-create-form'"
+                [registry]="getRegistry()"
                 [instance]="instance"
                 [options]="formOptions"
                 (ngSubmit)="onSubmit($event)"></txs-form>
