--- a/packages/storage-ng/src/types/storage-types.component.html
+++ b/packages/storage-ng/src/types/storage-types.component.html
@@ -7,6 +7,7 @@
     <table class="table hover">
       <thead>
       <tr>
+        <th>Storage</th>
         <th>Namespace</th>
         <th>Schema</th>
         <th>Name</th>
@@ -18,6 +19,7 @@
 
       <tbody>
       <tr *ngFor="let entityRef of getEntityRefs()">
+        <td>{{entityRef.getOptions('storage', '')}}</td>
         <td>{{entityRef.getNamespace()}}</td>
         <td>{{entityRef.getOptions('schema', []).join(', ')}}</td>
         <td>{{entityRef.name}}</td>
