--- a/packages/base-ng/src/datatable/list-view/list-view.component.html
+++ b/packages/base-ng/src/datatable/list-view/list-view.component.html
@@ -13,7 +13,8 @@
 
         <txs-view [instance]="row"
                   [allowViewModeSwitch]="allowViewModeSwitch"
-                  [mode]="viewMode">
+                  [mode]="viewMode"
+                  [options]="options.viewOptions">
           <div txsViewFallback>
             <txs-simple-json [instance]="row"></txs-simple-json>
           </div>
