fix: better search results resolve + storage sort fix

--- a/packages/base-ng/src/datatable/list-view/list-view.component.html
+++ b/packages/base-ng/src/datatable/list-view/list-view.component.html
@@ -16,7 +16,9 @@
                   [mode]="viewMode"
                   [options]="options.viewOptions">
           <div txsViewFallback>
-            <txs-simple-json [instance]="row"></txs-simple-json>
+            <txs-simple-json [instance]="row"
+                             [options]="options.viewOptions">
+            </txs-simple-json>
           </div>
         </txs-view>
       </div>
