fix: work on task ui

--- a/packages/tasks-ng/src/execution/tasks-execution.component.html
+++ b/packages/tasks-ng/src/execution/tasks-execution.component.html
@@ -1,6 +1,7 @@
 <div class="card" *ngIf="taskRef">
   <div class="card-header">
     <h3>Task {{taskRef.name}} execution</h3>
+    <div class="description">{{taskRef.description}}</div>
   </div>
   <div class="card-body">
     <div class="form-group">
