fix: multiple work

--- a/packages/app/src/app/addons/ag-grid/ag-grid-wrapper.component.html
+++ b/packages/app/src/app/addons/ag-grid/ag-grid-wrapper.component.html
@@ -1,7 +1,7 @@
 <div class="ag-grid-container">
   <ag-grid-angular
     class="ag-theme-balham"
-    [rowData]="rows"
+    [rowData]="dataNodes"
     [columnDefs]="columnDefs"
   >
   </ag-grid-angular>
