--- a/packages/base-ng/src/datatable/list-view/list-view.component.html
+++ b/packages/base-ng/src/datatable/list-view/list-view.component.html
@@ -8,7 +8,7 @@
 
 
   <div class="list-container">
-    <div class="row" *ngFor="let row of rows">
+    <div class="row" *ngFor="let row of dataNodes">
       <div class="col-md-12">
 
         <txs-view [instance]="row"
