--- a/packages/storage-ng/src/query/embedded/storage-query-embedded.component.html
+++ b/packages/storage-ng/src/query/embedded/storage-query-embedded.component.html
@@ -13,6 +13,7 @@
     [options]="options"
     [(params)]="params"
     (doQuery)="doQuery($event)"
+    (gridReady)="onGridReady($event)"
   ></txs-datatable>
 
 </div>
