fix: try optimize base-ng

--- a/packages/base-ng/src/component/query/query-embedded.component.html
+++ b/packages/base-ng/src/component/query/query-embedded.component.html
@@ -8,6 +8,7 @@
 
   <txs-datatable
     #datatable
+    [passThrough]="{'entityRef': entityRef}"
     [component]="componentClass"
     [columns]="columns"
     [options]="options"
