--- a/packages/app-auth/src/styles/styles.scss
+++ b/packages/app-auth/src/styles/styles.scss
@@ -9,9 +9,9 @@ body, html {
 @import "icons-pct.css";
 
 $fa-font-path: '/assets/fonts/';
-@import "~@fortawesome/fontawesome-free/scss/fontawesome";
-@import "~@fortawesome/fontawesome-free/scss/brands";
-@import "~@fortawesome/fontawesome-free/scss/solid";
+@import "@fortawesome/fontawesome-free/scss/fontawesome";
+@import "@fortawesome/fontawesome-free/scss/brands";
+@import "@fortawesome/fontawesome-free/scss/solid";
 
 /**  =====================
      Google Font
