--- a/packages/app/src/app/components/grids/tables-demo.component.html
+++ b/packages/app/src/app/components/grids/tables-demo.component.html
@@ -4,7 +4,7 @@
 
   <txs-simple-html-table
     [columns]="staticdata_1.columns"
-    [dataNodes]="staticdata_1.rows"
+    [rows]="staticdata_1.rows"
   ></txs-simple-html-table>
 
   <h5>Simple HTML Table (over wrapper)</h5>
@@ -12,14 +12,14 @@
   <txs-datatable
     [component]="simpleTableComp"
     [columns]="staticdata_1.columns"
-    [dataNodes]="staticdata_1.rows"
+    [rows]="staticdata_1.rows"
   ></txs-datatable>
 
   <h5>Ag Grid</h5>
 
   <txs-ag-grid class="mt-2 mb-2"
     [columns]="staticdata_1.columns"
-    [dataNodes]="staticdata_1.rows"
+    [rows]="staticdata_1.rows"
   ></txs-ag-grid>
 
   <h5>Ag Grid (over wrapper)</h5>
@@ -27,7 +27,7 @@
   <txs-datatable class="mt-2 mb-2"
     [component]="agGridComp"
     [columns]="staticdata_1.columns"
-    [dataNodes]="staticdata_1.rows"
+    [rows]="staticdata_1.rows"
   ></txs-datatable>
 
 </bat-card>
