--- a/packages/base-ng/src/datatable/simple-html-table/simple-html-table.component.html
+++ b/packages/base-ng/src/datatable/simple-html-table/simple-html-table.component.html
@@ -9,7 +9,7 @@
 
   <txs-pager *ngIf="isPagerEnabled()"
              [name]="options.pagerId"
-             [pager]="pager"
+             [pager]="getPager(false)"
              (pageChange)="onPagerAction($event)">
   </txs-pager>
 
@@ -17,7 +17,7 @@
     <table class="table">
       <thead>
       <tr>
-        <th class="col-md-auto" *ngFor="let column of columns">
+        <th *ngFor="let column of columns">
           <div class="col-head" [ngClass]="{'field-sortable' : column.sorting, 'field-filterable' : column.filter}">
             <div class="col-label">{{ column.label }}</div>
             <div class="col-ops">
@@ -46,14 +46,22 @@
       </tr>
       </thead>
       <tbody>
-      <tr *ngFor="let dataNode of getValues() | async">
-        <td class="col-md-auto" *ngFor="let column of columns">
-          <txs-simple-html-cell
-            [parent]="getSelf()"
-            [column]="column"
-            [row]="dataNode">
-          </txs-simple-html-cell>
-        </td>
+      <tr [attr.idx]="dataNode ? dataNode.idx : -1"
+          [ngClass]="{ 'placeholder': dataNode.isEmpty() }"
+          *ngFor="let dataNode of getValues() | async">
+        <ng-container *ngIf="!dataNode.isEmpty()">
+          <td *ngFor="let column of columns">
+            <txs-simple-html-cell
+              [parent]="getSelf()"
+              [column]="column"
+              [row]="dataNode">
+            </txs-simple-html-cell>
+          </td>
+        </ng-container>
+        <ng-container *ngIf="dataNode.isEmpty()">
+          <td [colSpan]="columns.length">Loading ...</td>
+        </ng-container>
+
       </tr>
       </tbody>
     </table>
@@ -62,7 +70,8 @@
   <!-- NOTE: We use the same pager like on top -->
   <txs-pager *ngIf="isPagerEnabled()"
              [name]="options.pagerId"
-             [pager]="pager">
+             [pager]="getPager(false)"
+  >
   </txs-pager>
 
 
