--- a/packages/base-ng/src/datatable/simple-html-table/simple-html-table.component.scss
+++ b/packages/base-ng/src/datatable/simple-html-table/simple-html-table.component.scss
@@ -50,6 +50,7 @@ $fa-var-times: \f00d;
 .icon {
   font-size: 0.8em;
   color: #888;
+
   &.icon-sort {
     &:before {
       content: fa-content($fa-var-sort);
@@ -87,17 +88,28 @@ $fa-var-times: \f00d;
  */
 .mode-infinite {
   .table-container {
-     table {
-       tbody {
-         display: block;
-         overflow: auto;
-         width: 100%;
-         height: 400px;
-       }
+    table {
+      width: 100%;
 
-       thead tr{
-         display:block;
-       }
-     }
+      th, td {
+        width: 100px;
+      }
+
+      tbody {
+        display: block;
+        overflow: auto;
+        height: 400px;
+
+        tr {
+          min-height: 20px;
+        }
+      }
+
+      thead {
+        tr {
+          display: block;
+        }
+      }
+    }
   }
 }
