--- a/packages/base-ng/src/datatable/simple-html-table/simple-html-table.component.html
+++ b/packages/base-ng/src/datatable/simple-html-table/simple-html-table.component.html
@@ -1,11 +1,11 @@
 <div class="simple-html-table-container mode-{{this.options.mode}}">
 
-  <div *ngIf="options.insertable">
-    <button type="button" class="btn btn-primary"
-            (click)="addNewRow()">
-      <i class="fa fa-plus-circle"></i> New row
-    </button>
-  </div>
+<!--  <div *ngIf="options.insertable">-->
+<!--    <button type="button" class="btn btn-primary"-->
+<!--            (click)="addNewRow()">-->
+<!--      <i class="fa fa-plus-circle"></i> New row-->
+<!--    </button>-->
+<!--  </div>-->
 
   <txs-pager *ngIf="isPagerEnabled()"
              [name]="options.pagerId"
